 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-4370: HBaseStorage should support delete markers (bridiver via daijy)

PIG-4360: HBaseStorage should support setting the timestamp field (bridiver via daijy)

PIG-4337: Split Types and MultiQuery e2e tests into multiple groups (rohini)

PIG-4066: An optimization for ROLLUP operation in Pig (hxquangnhat via cheolsoo)

PIG-4333: Split BigData tests into multiple groups (rohini)
 
BUG FIXES

PIG-4371: Duplicate snappy.version in libraries.properties (daijy)

PIG-4368: Port local mode tests to Tez - TestLoadStoreFuncLifeCycle (daijy)

PIG-4367: Port local mode tests to Tez - TestMultiQueryBasic (daijy)

PIG-4339: e2e test framework assumes default exectype as mapred (rohini)

PIG-2949: JsonLoader only reads arrays of objects (eyal via daijy)

PIG-4213: CSVExcelStorage not quoting texts containing \r (CR) when storing (alfonso.nishikawa via daijy)

PIG-2647: Split Combining drops splits with empty getLocations() (tmwoodruff via daijy)

PIG-4294: Enable unit test "TestNestedForeach" for spark (kellyzly via rohini)

PIG-4282: Enable unit test "TestForEachNestedPlan" for spark (kellyzly via rohini) 

PIG-4361: Fix perl script problem in TestStreaming.java (kellyzly via xuefu)

PIG-4354: Port local mode tests to Tez - part3 (daijy)

PIG-4338: Fix test failures with JDK8 (rohini)

PIG-4351: TestPigRunner.simpleTest2 fail on trunk (daijy)

PIG-4350: Port local mode tests to Tez - part2 (daijy)

PIG-4326: AvroStorageSchemaConversionUtilities does not properly convert schema for maps of arrays of records (mprim via daijy)
